site/k8s/certbot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f ../docker-compose-deploy.yml
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: certbot
  name: certbot
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: certbot
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f ../docker-compose-deploy.yml
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/site-default: "true"
        io.kompose.service: certbot
    spec:
      containers:
      - name: certbot
        image: nylexdotnet/website:certbot
        resources: {}
        volumeMounts:
          - mountPath: /vol/www
            name: certbot-web
          - mountPath: /etc/letsencrypt
            name: certbot-certs
      restartPolicy: Always
      volumes:
        - name: certbot-web
          persistentVolumeClaim:
          claimName: certbot-web-pvc
          # persistentVolumeClaim:
          #   claimName: certbot-web
        - name: certbot-certs
          persistentVolumeClaim:
          claimName: certbot-certs-pvc
          # persistentVolumeClaim:
          #   claimName: certbot-certs
status: {}
