site/k8s/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.network/site-default: "true"
        io.kompose.service: db
    spec:
      containers:
      - name: db
        image: nylexdotnet/website:postgresql
        ports:
        - containerPort: 5432
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "1"
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
        - name: dump-volume
          mountPath: /tmp/dump.dump
          subPath: dump.dump
      volumes:
      - name: postgres-data
        persistentVolumeClaim:
          claimName: postgres-pvc
      - name: dump-volume
        persistentVolumeClaim:
          claimName: dump-pvc
