site/k8s/nylex-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f ../docker-compose-deploy.yml
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: nylex
  name: nylex
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nylex
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f ../docker-compose-deploy.yml
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/site-default: "true"
        io.kompose.service: nylex
    spec:
      containers:
      - name: nylex
        image: nylexdotnet/website:latest
        resources: {}
        volumeMounts:
          - mountPath: /vol/web
            name: static-data
      restartPolicy: Always
      volumes:
        - name: static-data
          hostPath:
            path: /vol/web
          # persistentVolumeClaim:
          #   claimName: static-data
status: {}
