site/k8s/nylex-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f ../docker-compose-deploy.yml
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: nylex
  name: nylex-service
spec:
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
  selector:
    io.kompose.service: nylex
  type: LoadBalancer
