site/k8s/ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ws-henry.nylex.net  # Domain to access your app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: django-service
            port:
              number: 9000
  # Enable SSL with cert-manager (optional)
  tls:
  - hosts:
    - ws-henry.nylex.net
    secretName: tls-secret
